# practicum

./: .clang-format  .gitignore  CMakeLists.txt  CMakeLists_unused.txt  README.md  conda_env_24_25.yml  in.txt  out
codeforces/1059/: A.cpp  B.cpp  C.cpp  D.cpp
misc/: cr_bin.c  cr_file_hard_link.c
semester_2/contest_2/: 201.asm  202.asm  203.asm  204.asm  205.asm  206.asm  207.asm  208.asm  209.asm  210.asm  211.asm  212.asm  213.asm  214.asm  215.asm  216.asm
semester_2/contest_3/: 301.asm  302.asm  303.asm  304.asm  305.asm  306.asm  307.asm  308.asm  309.asm  310.asm  311.asm  313.asm  314.asm  3r1.asm  3r1.c  3r2.asm  3r2.c  3r3.asm  3r3.c  3r4.asm  3r4.c  3r5.asm  3r5.c  3r6.asm  3r6.c
semester_2/contest_4/: 401.asm  402.asm  407.asm  408.asm  411.asm  414.asm  417.asm  418.asm  4r1.asm  4r1.c  4r2.asm  4r2.c  4r3.asm  4r3.c  4r4.asm  4r4.c  4r6.asm  4r6.c
semester_2/contest_5/: 501.asm  502.asm  503.asm  504.asm  505.asm  506.asm  507.asm  508.asm  509.asm  514.asm  516.asm
semester_3/contest_1/: 01-1.c  01-2.c  01-3.c  01-4.c  01-5.c
semester_3/contest_10/: .gdb_history
semester_3/contest_10/10-1/: 10-1.txt  task1
semester_3/contest_10/10-2/: task2
semester_3/contest_10/10-3/: cJSON.c  task3
semester_3/contest_10/10-6/: 55d3  coredump.txt
semester_3/contest_2/: 02-1.c
semester_3/contest_3/: 03-1.c  03-2.c  03-3.c  03-4.c  03-5.c
semester_3/contest_4/: 04-1.c  04-2.c  04-3.c  04-4.c  04-5.c  README.md
semester_3/contest_5/: 05-1.c  05-2.c  05-3.c  05-4.c  05-5.c
semester_3/contest_6/: 06-1.c  06-2.c  06-3.c  06-4.c  06-5.c
semester_3/contest_7/: 07-1.c  07-2.c  07-3.c  07-4.c  07-5.c
semester_3/contest_8/: 08-1.c  08-2.c  08-3.c
semester_4/contest_1/: 01-1.cpp  01-2.cpp  01-3.cpp  01-4.cpp  01-5.cpp  01-6.cpp
semester_4/contest_10/: 10-1.cpp  10-2.cpp  10-4.cpp  10-5.cpp
semester_4/contest_11/: 11-1.cpp  11-4.cpp  11-6.cpp
semester_4/contest_2/: 02-1.cpp  02-2.cpp  02-3.cpp  02-4.cpp
semester_4/contest_3/: 03-1.cpp  03-4.cpp  03_full.cpp  cmc_complex.h  cmc_complex_eval.h  cmc_complex_stack.h
semester_4/contest_4/: 04-1.cpp  04-2.cpp  04-3.cpp  04-4.cpp  04-5.cpp
semester_4/contest_5/: 05-1.cpp  05-2.cpp  05-3.cpp  05-4.cpp  05-5.cpp  05-5_failed.cpp
semester_4/contest_6/: 06-1.cpp  06-2.cpp  06-3.cpp  06-4.cpp  06-5.cpp
semester_4/contest_7/: 07-1.cpp  07-2.cpp  07-2_modern.cpp  07-3.cpp  07-4.cpp  07-5.cpp
semester_4/contest_8/: 08-1.cpp  08-2.cpp  08-3.cpp  08-4.cpp  08-5.cpp
semester_4/contest_9/: 09-1.cpp  09-2.cpp  09-3.cpp  09-4.cpp  09-5.cpp
semester_5/ML/base1/task1-5/: Untitled.ipynb  task15.py
semester_5/ML/base1/task1-5/.ipynb_checkpoints/: 1-checkpoint.py  Untitled-checkpoint.ipynb  task15-checkpoint.py
semester_5/ML/base1/task6/: task6.py
semester_5/ML/base1/task7/.ipynb_checkpoints/: task7-checkpoint.py
semester_5/ML/base2/: base2.ipynb  base_functions.py  base_functions_vectorised.py
semester_5/ML/base3/: base3.ipynb  scalers.py
semester_5/ML/base4/: base4.ipynb
semester_5/ML/base5/: base5.ipynb
semester_5/ML/base6/: base6.ipynb
semester_5/ML/base7/: svm_solution.py
semester_5/ML/research1/: research1.ipynb  research_functions.py  research_functions_vectorised.py
semester_5/ML/research2/: cross_val.py  research2.ipynb
semester_5/ML/research3/: Task.py  research3.ipynb
semester_5/ML/research4/: research4.ipynb
semester_5/ML/research5/: research5.ipynb
semester_5/Matlab/lab1/: 1.1-13.m
semester_5/Matlab/lab2/: 2.11.m~  lab2_10.m  lab2_10.tex  lab2_11_12.m  lab2_13.m  lab2_14_15.m  lab2_1_2.m  lab2_3.m  lab2_4.m  lab2_5.m  lab2_6.m  lab2_7.m  lab2_8.m  lab2_9.m
semester_5/Matlab/lab3/: ProbMatrix.mat  aliasing1.eps  aliasing2.eps  f1.eps  f1_1.eps  f2.eps  f3.eps  f4.eps  lab2_08.tex  lab3_01.m  lab3_02.m  lab3_03.m  lab3_04.m  lab3_05.m  lab3_06.m  lab3_07.m  lab3_08.m  lab3_09.m  lab3_10.m  lab3_11.tex  test.m
semester_5/Matlab/lab4/: 11.eps  12.eps  21.eps  22.eps  3.eps  4.eps  5.eps  countcos.c  countcos.mexa64  lab4_1.m  lab4_2.m  lab4_6.m  lab4_7.tex  qr_c.c  qr_c.mexa64
semester_6/MATLAB/MO/: MO.m
semester_6/MATLAB/coursework3/continuous/: continuous.m  ex11.eps  ex12.eps  ex13.eps  ex14.eps  ex21.eps  ex22.eps  ex23.eps  ex24.eps
semester_6/MATLAB/coursework3/discrete/: Lyapunov.eps  Neimark-Sacker.eps  bifur.eps  dg.eps  discrete.m  ex1.eps  ex2.eps  ex3.eps  ex4.eps  ex5.eps  ex6.eps  ex7.eps  g.eps  multi.eps  u1.eps
semester_6/MATLAB/lab6_1/: ex11.eps  ex12.eps  ex13.eps  ex14.eps  ex15.eps  ex16.eps  ex17.eps  ex18.eps  ex21.eps  ex22.eps  ex23.eps  ex24.eps  ex25.eps  ex26.eps  ex27.eps  ex28.eps  ex31.eps  ex32.eps  ex33.eps  ex34.eps  ex35.eps  ex36.eps  ex37.eps  ex38.eps  ex41.eps  ex51.eps  ex52.eps  ex61.eps  ex71.eps  ex72.eps  ex73.eps  example1.eps  example2.eps  example3.eps  example4.eps  example5.eps  example6.eps  example7.eps  lab6_1.m
semester_6/MATLAB/lab6_2/task1/: ex11.eps  ex12.eps  ex13.eps  ex21.eps  ex22.eps  ex23.eps  lab6_2_1.m
semester_6/MATLAB/lab6_2/task2/: ex11.eps  ex12.eps  ex13.eps  ex14.eps  ex15.eps  ex16.eps  ex21.eps  ex22.eps  ex23.eps  ex24.eps  ex25.eps  ex26.eps  lab6_2_2.m
semester_6/ML/base8/: split_measures.py
semester_6/ML/base8/__MACOSX/: ._public_tests  ._run.py  ._split_measures.py
semester_7/DL/lab1/: 01_derivatives.ipynb  02_hw_mnist_classification.ipynb  Homework_1.1._Dense_Networks_2025.ipynb  derivatives.py  submission_dict_mnist_task_1.json
semester_7/MME/lab1/: graph.html  main.ipynb  parser.py
semester_7/MME/lab1/data/: .~lock.JPN1998dom.csv#  .~lock.JPN2008dom.csv#  JPN2004dom.csv  names.txt
semester_7/StochAn/: stochastic__analysis_milovidov.ipynb
yandex_training/algo_8/hw1/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  G.cpp  H.cpp  I.cpp  J.cpp
yandex_training/algo_8/hw2/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  G.cpp  H.cpp  I.cpp  J.cpp
yandex_training/algo_8/hw3/: A.cpp  B  B.cpp  C.cpp
