cmake_minimum_required(VERSION 3.24)
project(practicum)

set(CMAKE_CXX_STANDARD 14)

add_executable(01-1 semester_3/contest_1/01-1.c)
add_executable(01-2 semester_3/contest_1/01-2.c)
add_executable(01-3 semester_3/contest_1/01-3.c)
add_executable(01-4 semester_3/contest_1/01-4.c)
add_executable(01-5 semester_3/contest_1/01-5.c)
add_executable(02-1 semester_3/contest_2/02-1.c)
add_executable(03-1 semester_3/contest_3/03-1.c)
add_executable(03-2 semester_3/contest_3/03-2.c)
add_executable(03-3 semester_3/contest_3/03-3.c)
add_executable(03-4 semester_3/contest_3/03-4.c)
add_executable(03-5 semester_3/contest_3/03-5.c)
add_executable(04-1 semester_3/contest_4/04-1.c)
add_executable(04-2 semester_3/contest_4/04-2.c)
add_executable(04-3 semester_3/contest_4/04-3.c)
add_executable(04-4 semester_3/contest_4/04-4.c)
add_executable(04-5 semester_3/contest_4/04-5.c)
add_executable(cr_bin misc/cr_bin.c)