cmake_minimum_required(VERSION 3.24)
project(practicum)

set(CMAKE_CXX_STANDARD 14)

add_executable(01-1 semester_3/contest_1/01-1.c)
add_executable(01-2 semester_3/contest_1/01-2.c)
add_executable(01-3 semester_3/contest_1/01-3.c)
add_executable(01-4 semester_3/contest_1/01-4.c)
add_executable(01-5 semester_3/contest_1/01-5.c)
add_executable(02-1 semester_3/contest_2/02-1.c)
add_executable(03-1 semester_3/contest_3/03-1.c)
add_executable(03-2 semester_3/contest_3/03-2.c)
add_executable(03-3 semester_3/contest_3/03-3.c)
add_executable(03-4 semester_3/contest_3/03-4.c)
add_executable(03-5 semester_3/contest_3/03-5.c)
add_executable(04-1 semester_3/contest_4/04-1.c)
add_executable(04-2 semester_3/contest_4/04-2.c)
add_executable(04-3 semester_3/contest_4/04-3.c)
add_executable(04-4 semester_3/contest_4/04-4.c)
add_executable(04-5 semester_3/contest_4/04-5.c)
add_executable(05-1 semester_3/contest_5/05-1.c)
add_executable(05-2 semester_3/contest_5/05-2.c)
add_executable(05-3 semester_3/contest_5/05-3.c)
add_executable(05-4 semester_3/contest_5/05-4.c)
add_executable(05-5 semester_3/contest_5/05-5.c)
add_executable(06-1 semester_3/contest_6/06-1.c)
add_executable(06-2 semester_3/contest_6/06-2.c)
add_executable(06-3 semester_3/contest_6/06-3.c)
add_executable(06-4 semester_3/contest_6/06-4.c)
add_executable(06-5 semester_3/contest_6/06-5.c)
add_executable(07-1 semester_3/contest_7/07-1.c)
add_executable(07-2 semester_3/contest_7/07-2.c)
add_executable(07-3 semester_3/contest_7/07-3.c)
add_executable(07-4 semester_3/contest_7/07-4.c)
add_executable(07-5 semester_3/contest_7/07-5.c)
add_executable(08-1 semester_3/contest_8/08-1.c)
add_executable(08-2 semester_3/contest_8/08-2.c)
add_executable(08-3 semester_3/contest_8/08-3.c)
add_executable(10-1 semester_3/contest_10/10-1/task1.c semester_3/contest_10/10-1/cJSON.c)
target_link_libraries(10-1 m)
add_executable(10-2 semester_3/contest_10/10-2/task2.c semester_3/contest_10/10-2/cJSON.c)
target_link_libraries(10-2 m)
add_executable(10-3 semester_3/contest_10/10-3/task3.c semester_3/contest_10/10-3/cJSON.c)
target_link_libraries(10-3 m)
add_executable(cr_bin misc/cr_bin.c)
add_executable(cr_file_hard_link misc/cr_file_hard_link.c)