cmake_minimum_required(VERSION 3.24)
project(practicum)

set(CMAKE_CXX_STANDARD 26)
#[[
add_executable(03-01-1 semester_3/contest_1/01-1.c)
add_executable(03-01-2 semester_3/contest_1/01-2.c)
add_executable(03-01-3 semester_3/contest_1/01-3.c)
add_executable(03-01-4 semester_3/contest_1/01-4.c)
add_executable(03-01-5 semester_3/contest_1/01-5.c)
add_executable(03-02-1 semester_3/contest_2/02-1.c)
add_executable(03-03-1 semester_3/contest_3/03-1.c)
add_executable(03-03-2 semester_3/contest_3/03-2.c)
add_executable(03-03-3 semester_3/contest_3/03-3.c)
add_executable(03-03-4 semester_3/contest_3/03-4.c)
add_executable(03-03-5 semester_3/contest_3/03-5.c)
add_executable(03-04-1 semester_3/contest_4/04-1.c)
add_executable(03-04-2 semester_3/contest_4/04-2.c)
add_executable(03-04-3 semester_3/contest_4/04-3.c)
add_executable(03-04-4 semester_3/contest_4/04-4.c)
add_executable(03-04-5 semester_3/contest_4/04-5.c)
add_executable(03-05-1 semester_3/contest_5/05-1.c)
add_executable(03-05-2 semester_3/contest_5/05-2.c)
add_executable(03-05-3 semester_3/contest_5/05-3.c)
add_executable(03-05-4 semester_3/contest_5/05-4.c)
add_executable(03-05-5 semester_3/contest_5/05-5.c)
add_executable(03-06-1 semester_3/contest_6/06-1.c)
add_executable(03-06-2 semester_3/contest_6/06-2.c)
add_executable(03-06-3 semester_3/contest_6/06-3.c)
add_executable(03-06-4 semester_3/contest_6/06-4.c)
add_executable(03-06-5 semester_3/contest_6/06-5.c)
add_executable(03-07-1 semester_3/contest_7/07-1.c)
add_executable(03-07-2 semester_3/contest_7/07-2.c)
add_executable(03-07-3 semester_3/contest_7/07-3.c)
add_executable(03-07-4 semester_3/contest_7/07-4.c)
add_executable(03-07-5 semester_3/contest_7/07-5.c)
add_executable(03-08-1 semester_3/contest_8/08-1.c)
add_executable(03-08-2 semester_3/contest_8/08-2.c)
add_executable(03-08-3 semester_3/contest_8/08-3.c)

add_executable(03-10-1 semester_3/contest_10/10-1/task1.c semester_3/contest_10/10-1/cJSON.c)
target_link_libraries(03-10-1 m)
add_executable(03-10-2 semester_3/contest_10/10-2/task2.c semester_3/contest_10/10-2/cJSON.c)
target_link_libraries(03-10-2 m)
add_executable(03-10-3 semester_3/contest_10/10-3/task3.c semester_3/contest_10/10-3/cJSON.c)
target_link_libraries(03-10-3 m)
add_executable(cr_bin misc/cr_bin.c)
add_executable(cr_file_hard_link misc/cr_file_hard_link.c)
]]


add_executable(04-01-1 semester_4/contest_1/01-1.cpp)
add_executable(04-01-2 semester_4/contest_1/01-2.cpp)
add_executable(04-01-3 semester_4/contest_1/01-3.cpp)
add_executable(04-01-4 semester_4/contest_1/01-4.cpp)
add_executable(04-01-5 semester_4/contest_1/01-5.cpp)
add_executable(04-01-6 semester_4/contest_1/01-6.cpp)
add_executable(04-02-1 semester_4/contest_2/02-1.cpp)
add_executable(04-02-2 semester_4/contest_2/02-2.cpp)
add_executable(04-02-3 semester_4/contest_2/02-3.cpp)
add_executable(04-02-4 semester_4/contest_2/02-4.cpp)
add_executable(04-03-1 semester_4/contest_3/03-1.cpp)
add_executable(04-03-2 semester_4/contest_3/03-2.cpp)
add_executable(04-03-3 semester_4/contest_3/03-3.cpp)
add_executable(04-03-4 semester_4/contest_3/03-4.cpp)
add_executable(04-03-full semester_4/contest_3/03_full.cpp)
add_executable(04-04-1 semester_4/contest_4/04-1.cpp)
add_executable(04-04-2 semester_4/contest_4/04-2.cpp)
add_executable(04-04-3 semester_4/contest_4/04-3.cpp)
add_executable(04-04-4 semester_4/contest_4/04-4.cpp)
add_executable(04-04-5 semester_4/contest_4/04-5.cpp)
add_executable(04-05-1 semester_4/contest_5/05-1.cpp)
add_executable(04-05-2 semester_4/contest_5/05-2.cpp)
add_executable(04-05-3 semester_4/contest_5/05-3.cpp)
add_executable(04-05-4 semester_4/contest_5/05-4.cpp)
add_executable(04-05-5 semester_4/contest_5/05-5.cpp)
add_executable(04-05-5_failed semester_4/contest_5/05-5_failed.cpp)
add_executable(04-06-1 semester_4/contest_6/06-1.cpp)
add_executable(04-06-2 semester_4/contest_6/06-2.cpp)
add_executable(04-06-3 semester_4/contest_6/06-3.cpp)
add_executable(04-06-4 semester_4/contest_6/06-4.cpp)
add_executable(04-06-5 semester_4/contest_6/06-5.cpp)
add_executable(04-07-1 semester_4/contest_7/07-1.cpp)
add_executable(04-07-2 semester_4/contest_7/07-2.cpp)
add_executable(04-07-2_modern semester_4/contest_7/07-2_modern.cpp)
add_executable(04-07-3 semester_4/contest_7/07-3.cpp)
add_executable(04-07-4 semester_4/contest_7/07-4.cpp)
add_executable(04-07-5 semester_4/contest_7/07-5.cpp)
add_executable(04-08-1 semester_4/contest_8/08-1.cpp)
add_executable(04-08-2 semester_4/contest_8/08-2.cpp)
add_executable(04-08-3 semester_4/contest_8/08-3.cpp)
add_executable(04-08-4 semester_4/contest_8/08-4.cpp)
add_executable(04-08-5 semester_4/contest_8/08-5.cpp)
#[[
]]